Scroll Down Button: Fix flickering mention & reaction buttons (#2344)

--- a/src/components/middle/FloatingActionButtons.module.scss
+++ b/src/components/middle/FloatingActionButtons.module.scss
@@ -10,6 +10,19 @@
   z-index: var(--z-scroll-down-button);
   pointer-events: none;
 
+  .hidden {
+    opacity: 0;
+    pointer-events: none;
+  }
+
+  .reactions {
+    transition: 0.2s ease opacity, 0.25s cubic-bezier(0.34, 1.56, 0.64, 1) transform;
+  }
+
+  .transform-down {
+    transform: translateY(4rem);
+  }
+
   .unread {
     pointer-events: none;
   }
